--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "16.13.1",
     "react-native": "0.63.1",
+    "react-native-fbsdk": "^2.0.0",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
