API ta respondendo JSON

--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,12 +2,6 @@ Flask
 pymysql
 Flask-SQLAlchemy
 flask-marshmallow
-flask_migrate
-flask-script
-flask-cors
-Flask-Login
-Flask-Mail
-Flask-Principal
-Flask-Testing
 iso8601
 pytz
+marshmallow-sqlalchemy
